--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,9 +2,12 @@ require: rubocop-rspec
 
 AllCops:
   Exclude:
-    - 'ch/**/*'
-    - 'spec/spec_helper.rb'
+    - "**/spec_helper.rb"
 
 Metrics/BlockLength:
   Exclude:
-    - 'spec/**/*'
+    - '**/spec/**/*'
+
+Metrics/LineLength:
+  Exclude:
+    - '**/spec/**/*'
